--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 body {
     background-color: #FF0000;
 }
+.tengah{
+    width:1200px;
+    margin: 0 auto;
+    position: relative;
+}
 
 header {
     color: #000;
@@ -11,6 +16,7 @@ header {
 h1 {
     margin-bottom: 0;
     text-transform: uppercase;
+    text-align: center;
 }
 
 h2 {
@@ -29,6 +35,9 @@ main {
 
 .poto img {
     width: 400px;
+    height: 460px;
+    object-fit: cover;
+    display: block;
 }
 
 .box {
@@ -49,6 +58,7 @@ button {
     border: 0;
     width: 100px;
     font-size: 22px;
+    cursor: pointer;
 }
 
 a {
